# pzadev-hadapters-dio

./: README.md
RpiPicoUsbModbus/: .gitignore  CMakeLists.txt  README.md  conf.h  firmware.c  master.py  test.md
RpiPicoUsbModbus/project/: CMakeLists.txt  firmware.c  pico_sdk_import.cmake
RpiPicoUsbModbus/project/inc/: app_RpiPicoUsbModbus.h  conf.h
RpiPicoUsbModbus/project/lib_app_RpiPicoUsbModbus/inc/: debug_file.h  gpio_file.h  modbus.h
RpiPicoUsbModbus/project/lib_app_RpiPicoUsbModbus/src/: debug_file.c  gpio_file.c  modbus.c
RpiPicoUsbModbus/project/src/: app_RpiPicoUsbModbus.c  firmware.c  main.c
